--- a/learn/Hello.html
+++ b/learn/Hello.html
@@ -1,17 +1,20 @@
 <!DOCTYPE html>
-<html lang="en">  
+<html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hello</title>
 </head>
+
 <body>
 
     <h1>coding is interesting</h1>
     <p>一个段落</p>
     <p>second</p>
 
+    <h5>基本</h5>
     <strong>加粗</strong> <b>加粗</b>
     <br />
     <em>倾斜</em> <i>qingxie</i>
@@ -19,24 +22,48 @@
     <del>删除线</del> <s>yeshi</s>
     <br />
     <ins>xiahua</ins> <u>huhu</u>
+
     <br />
-    <div>div 分割分区 单独占一行</div> 
+    <div>div 分割分区 单独占一行</div>
     <div>没有语义，是个盒子，用来装内容</div>
     <span>一行显示多个</span>
     <span>小盒子</span>
     <span>和div不太一样</span>
-    <br />
 
+    <h4>图像</h4>
+    <br />
     图像标签
     <br />
-    <img src="11.jpg" width="90" height="150" title="sheyuan"/>
+    <img src="11.jpg" width="90" height="150" title="sky" />
     <br />
     图像路径和文件名 URL<br />
-    <img src="11.jpg" height="150" title="sheyuan"/>
+    <img src="11.jpg" height="150" title="who photos" />
     <br />
-    <img src="1.jpg" alt="图像无法显示时替换" title="title提示文本"/>
-    <br />
+    <img src="1.jpg" alt="图像无法显示时替换" title="title提示文本" />
+
+    <h4>链接外网页</h4>
     <a href="https:www.baidu.com" target="_self">百度</a>
+    <br /> '_self'是取面缔该页 blank 是从新页面打开
+    <br />
+    <a href="https://www.jiangnan.edu.cn" target="_blank">江南大学</a>
+    <br />
+
+    <br />内网页链接，直接输入名称
+    <br />如果网页链接是文件或者压缩包，则会下载该文件
+    <br />
+    <a href="aa.html" target="_blank">aa</a>
+    <br />
+    <p><h4><a href="#" target="_blank">空白页</a></h4></p>
+
+    <h4>网页元素链接</h4>
+    <a href="http://www.baidu.com"><img src="11.jpg" height="300"/></a>
+
+    <h4>锚点链接</h4>
+    <p>在链接文本的href属性中，设置属性名“#名”如<a href="#two">第二集</a> 
+       找到目标位置标签，给其添加一个 ID属性=名 如 <h3 id="two">第二集介绍</h3>
+    </p>
+    
 
 </body>
+
 </html>
